fix: secondary button contrast

--- a/src/theme/themes/plh_kids_tz/_overrides.scss
+++ b/src/theme/themes/plh_kids_tz/_overrides.scss
@@ -14,4 +14,11 @@ body[data-theme="plh_kids_tz"] {
       }
     }
   }
+
+  // Button
+  plh-button {
+    .navigation.standard {
+      color: var(--ion-color-primary-shade);
+    }
+  }
 }
